--- a/app/src/main/resources/fx_screens/loadOptional.fxml
+++ b/app/src/main/resources/fx_screens/loadOptional.fxml
@@ -5,16 +5,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="354.0" prefWidth="552.0" style="-fx-background-radius: 40; -fx-border-radius: 40;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.OptionDialogController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="354.0" prefWidth="552.0" style="-fx-background-radius: 40; -fx-border-radius: 40;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.OptionDialogController">
    <children>
       <ImageView fitHeight="400.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/fon1.png" />
          </image>
       </ImageView>
-      <Pane layoutX="65.0" layoutY="45.0" prefHeight="264.0" prefWidth="421.0" style="-fx-background-color: #9DA0FA; -fx-background-radius: 30;">
+      <Pane layoutX="65.0" layoutY="45.0" prefHeight="264.0" prefWidth="421.0" style="-fx-background-color: #7AA3FA; -fx-background-radius: 30;">
          <children>
-            <Pane layoutX="27.0" layoutY="22.0" prefHeight="70.0" prefWidth="368.0" style="-fx-background-color: #0B0F85; -fx-background-radius: 21;" />
+            <Pane layoutX="27.0" layoutY="22.0" prefHeight="70.0" prefWidth="368.0" style="-fx-background-color: #0A2A85; -fx-background-radius: 21;" />
             <Pane fx:id="dialogPane" prefHeight="264.0" prefWidth="422.0" />
          </children>
       </Pane>
