--- a/app/src/main/resources/fx_screens/mainWindow.fxml
+++ b/app/src/main/resources/fx_screens/mainWindow.fxml
@@ -11,21 +11,21 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="629.0" maxWidth="1137.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="629.0" prefWidth="1137.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.MainWindowController">
+<AnchorPane maxHeight="629.0" maxWidth="1137.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="629.0" prefWidth="1137.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.MainWindowController">
    <children>
       <ImageView fx:id="animatedImageView" fitHeight="249.0" fitWidth="332.0" layoutX="808.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/menuV.png" />
          </image>
       </ImageView>
-      <Pane layoutX="49.0" layoutY="166.0" prefHeight="450.0" prefWidth="302.0" style="-fx-background-color: #9DA0FA; -fx-background-radius: 20;">
+      <Pane layoutX="49.0" layoutY="166.0" prefHeight="450.0" prefWidth="302.0" style="-fx-background-color: #7AA3FA; -fx-background-radius: 20;">
          <children>
             <Label layoutX="99.0" layoutY="24.0" text="Создавай">
                <font>
                   <Font name="Manrope Bold" size="20.0" />
                </font>
             </Label>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#0b0f85" height="8.0" layoutX="29.0" layoutY="65.0" strokeType="INSIDE" width="236.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#0a2a85" height="8.0" layoutX="29.0" layoutY="65.0" strokeType="INSIDE" width="236.0" />
          </children></Pane>
       <Pane fx:id="cardPane" layoutX="432.0" layoutY="166.0" prefHeight="450.0" prefWidth="302.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 26;">
          <effect>
@@ -46,9 +46,9 @@
                   <Font name="Manrope Bold" size="20.0" />
                </font>
             </Button>
-            <Pane fx:id="scrollPane" layoutX="28.0" layoutY="62.0" prefHeight="14.0" prefWidth="248.0" style="-fx-background-color: #9DA0FA; -fx-background-radius: 5;">
+            <Pane fx:id="scrollPane" layoutX="28.0" layoutY="62.0" prefHeight="14.0" prefWidth="248.0" style="-fx-background-color: #7AA3FA; -fx-background-radius: 5;">
                <children>
-                  <Rectangle fx:id="scrollRectangle" arcHeight="5.0" arcWidth="5.0" fill="#14165a" height="8.0" layoutX="6.0" layoutY="3.0" strokeType="INSIDE" width="51.0" />
+                  <Rectangle fx:id="scrollRectangle" arcHeight="5.0" arcWidth="5.0" fill="#131f5a" height="8.0" layoutX="6.0" layoutY="3.0" strokeType="INSIDE" width="51.0" />
                </children>
             </Pane>
             <Pane fx:id="pane1" layoutX="19.0" layoutY="87.0" prefHeight="347.0" prefWidth="257.0">
@@ -124,7 +124,7 @@
             </Pane>
          </children>
       </Pane>
-      <Pane layoutX="808.0" layoutY="166.0" prefHeight="450.0" prefWidth="302.0" style="-fx-background-color: #14165A; -fx-background-radius: 20;">
+      <Pane layoutX="808.0" layoutY="166.0" prefHeight="450.0" prefWidth="302.0" style="-fx-background-color: #131F5A; -fx-background-radius: 20;">
          <children>
             <ImageView fitHeight="85.0" fitWidth="111.0" layoutX="-29.0" layoutY="-26.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -136,9 +136,9 @@
                   <Font name="Manrope Bold" size="20.0" />
                </font>
             </Label>
-            <Pane fx:id="scrollPane1" layoutX="27.0" layoutY="62.0" prefHeight="14.0" prefWidth="248.0" style="-fx-background-color: #D0D0FF; -fx-background-radius: 5;">
+            <Pane fx:id="scrollPane1" layoutX="27.0" layoutY="62.0" prefHeight="14.0" prefWidth="248.0" style="-fx-background-color: #6F9AE5; -fx-background-radius: 5;">
                <children>
-                  <Rectangle fx:id="scrollRectangle1" arcHeight="5.0" arcWidth="5.0" fill="#0b0f85" height="8.0" layoutX="6.0" layoutY="3.0" strokeType="INSIDE" width="51.0" />
+                  <Rectangle fx:id="scrollRectangle1" arcHeight="5.0" arcWidth="5.0" fill="#0a2a85" height="8.0" layoutX="6.0" layoutY="3.0" strokeType="INSIDE" width="51.0" />
                </children>
             </Pane>
             <Button fx:id="scrollButton1" layoutX="255.0" layoutY="18.0" mnemonicParsing="false" style="-fx-background-color: #14165A;" text="&gt;" textFill="WHITE">
