--- a/app/src/main/resources/fx_screens/base.fxml
+++ b/app/src/main/resources/fx_screens/base.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.effect.GaussianBlur?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -21,7 +22,11 @@
          </image>
       </ImageView>
       <Pane fx:id="contentPane" layoutY="65.0" prefHeight="618.0" prefWidth="1138.0" />
-      <Pane fx:id="downloadPane" layoutX="732.0" layoutY="600.0" opacity="0.0" prefHeight="93.0" prefWidth="334.0" style="-fx-background-color: #0A2A85; -fx-background-radius: 20;" />
+      <Pane fx:id="downloadPane" layoutX="732.0" layoutY="590.0" maxHeight="332.0" maxWidth="334.0" minHeight="93.0" minWidth="334.0" opacity="0.0" prefHeight="93.0" prefWidth="334.0" style="-fx-background-color: #0A2A85; -fx-background-radius: 20;">
+         <children>
+            <ScrollPane fx:id="downloadScroll" maxHeight="332.0" maxWidth="334.0" minHeight="94.0" minWidth="334.0" prefHeight="94.0" prefWidth="334.0" style="-fx-background-color: transparent; -fx-background: transparent;" />
+         </children>
+      </Pane>
       <Pane fx:id="disablePane" layoutY="63.0" opacity="0.2" prefHeight="717.0" prefWidth="1137.0" style="-fx-background-color: #0A2A85; -fx-background-radius: 20;" visible="false">
          <effect>
             <GaussianBlur radius="2.0" />
@@ -50,7 +55,7 @@
             <Image url="@../images/CloseCircle.png" />
          </image>
       </ImageView>
-      <Pane fx:id="downloadLane" layoutX="733.0" layoutY="700.0" prefHeight="18.0" prefWidth="334.0" style="-fx-background-color: #B8D0FF; -fx-background-radius: 5;" />
+      <Pane fx:id="downloadLane" layoutX="723.0" layoutY="690.0" prefHeight="38.0" prefWidth="347.0" style="-fx-background-color: #B8D0FF; -fx-background-radius: 20;" />
       <VBox fx:id="sideMenu" layoutX="0.0" layoutY="65.0" prefHeight="715.0" prefWidth="363.0" style="-fx-background-color: #0A2A85; -fx-background-radius: 0 30 30 0;" translateX="-363.0">
          <children>
             <Pane prefHeight="419.0" prefWidth="363.0">
