--- a/app/src/main/resources/styles/load.css
+++ b/app/src/main/resources/styles/load.css
@@ -1,27 +1,27 @@
-.scroll-pane {
+.saves-scroll-pane {
     -fx-background-color: transparent;
     -fx-background: transparent;
     -fx-background-radius: 18;
 }
 
-.scroll-pane .viewport {
+.saves-scroll-pane .viewport {
     -fx-background-color: transparent;
 }
 
-.scroll-pane .scroll-bar:vertical,
-.scroll-pane .scroll-bar:horizontal {
+.saves-scroll-pane .scroll-bar:vertical,
+.saves-scroll-pane .scroll-bar:horizontal {
     -fx-opacity: 1;
 }
 
-.scroll-pane .scroll-bar:vertical {
+.saves-scroll-pane .scroll-bar:vertical {
     -fx-translate-x: -15px;
 }
 
-.scroll-pane .scroll-bar .thumb {
+.saves-scroll-pane .scroll-bar .thumb {
     -fx-background-color: rgba(10, 42, 133, 0.75);
 }
 
-.scroll-pane .scroll-bar .track {
+.saves-scroll-pane .scroll-bar .track {
     -fx-background-color: #B8D0FF;
 }
 
