add dialogs functionality, combobox add option, new default speakers for protocol

--- a/app/src/main/resources/styles/style.css
+++ b/app/src/main/resources/styles/style.css
@@ -51,7 +51,7 @@
 }
 
 .custom-combobox {
-    -fx-background-color: rgba(11, 15, 133, 0.75);
+    -fx-background-color: rgb(62,89,163);
     -fx-background-radius: 10px;
     -fx-text-fill: #F5F5F5;
     -fx-font-family: 'Manrope';
