--- a/app/src/main/resources/fx_screens/DialogExit.fxml
+++ b/app/src/main/resources/fx_screens/DialogExit.fxml
@@ -19,7 +19,7 @@
             <Font name="Manrope SemiBold" size="20.0" />
          </font>
       </Label>
-      <Button layoutX="14.0" layoutY="132.0" mnemonicParsing="false" opacity="0.8" prefHeight="44.0" prefWidth="93.0" style="-fx-background-color: #0A2A85; -fx-background-radius: 18;" text="да" textFill="WHITE">
+      <Button fx:id="yesButton" layoutX="14.0" layoutY="132.0" mnemonicParsing="false" opacity="0.8" prefHeight="44.0" prefWidth="93.0" style="-fx-background-color: #0A2A85; -fx-background-radius: 18;" text="да" textFill="WHITE">
          <font>
             <Font name="Manrope SemiBold" size="14.0" />
          </font>
@@ -31,7 +31,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button layoutX="312.0" layoutY="132.0" mnemonicParsing="false" opacity="0.8" prefHeight="44.0" prefWidth="94.0" style="-fx-background-color: #2A4CD5; -fx-background-radius: 18;" text="нет" textFill="WHITE">
+      <Button fx:id="noButton" layoutX="312.0" layoutY="132.0" mnemonicParsing="false" opacity="0.8" prefHeight="44.0" prefWidth="94.0" style="-fx-background-color: #2A4CD5; -fx-background-radius: 18;" text="нет" textFill="WHITE">
          <font>
             <Font name="Manrope SemiBold" size="14.0" />
          </font>
