--- a/app/src/main/resources/fx_screens/DialogSpeaker.fxml
+++ b/app/src/main/resources/fx_screens/DialogSpeaker.fxml
@@ -8,13 +8,13 @@
 
 <AnchorPane prefHeight="264.0" prefWidth="421.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Label layoutX="88.0" layoutY="34.0" text="Укажите название файла" textFill="WHITE">
+        <Label layoutX="86.0" layoutY="34.0" text="Укажите имя говорящего" textFill="WHITE">
             <font>
                 <Font name="Manrope SemiBold" size="20.0" />
             </font>
         </Label>
-      <TextField layoutX="39.0" layoutY="143.0" prefHeight="37.0" prefWidth="342.0" promptText="название файла" style="-fx-border-color: #2A55D5; -fx-border-radius: 10; -fx-border-width: 2; -fx-background-color: #FFFFFF; -fx-background-radius: 10;" />
-      <Button layoutX="163.0" layoutY="211.0" mnemonicParsing="false" style="-fx-background-color: #2A55D5; -fx-background-radius: 16;" text="Сохранить" textFill="WHITE">
+        <TextField layoutX="39.0" layoutY="143.0" prefHeight="37.0" prefWidth="342.0" promptText="говорящий" style="-fx-border-color: #2A55D5; -fx-border-radius: 10; -fx-border-width: 2; -fx-background-color: #FFFFFF; -fx-background-radius: 10;" />
+      <Button layoutX="167.0" layoutY="209.0" mnemonicParsing="false" style="-fx-background-color: #2A55D5; -fx-background-radius: 16;" text="Добавить" textFill="WHITE">
          <font>
             <Font name="Manrope SemiBold" size="14.0" />
          </font>
