--- a/app/src/main/resources/fx_screens/DialogSpeaker.fxml
+++ b/app/src/main/resources/fx_screens/DialogSpeaker.fxml
@@ -13,8 +13,8 @@
                 <Font name="Manrope SemiBold" size="20.0" />
             </font>
         </Label>
-        <TextField layoutX="39.0" layoutY="143.0" prefHeight="37.0" prefWidth="342.0" promptText="говорящий" style="-fx-border-color: #2A55D5; -fx-border-radius: 10; -fx-border-width: 2; -fx-background-color: #FFFFFF; -fx-background-radius: 10;" />
-      <Button layoutX="167.0" layoutY="209.0" mnemonicParsing="false" style="-fx-background-color: #2A55D5; -fx-background-radius: 16;" text="Добавить" textFill="WHITE">
+        <TextField fx:id="textSpeaker" layoutX="39.0" layoutY="143.0" prefHeight="37.0" prefWidth="342.0" promptText="говорящий" style="-fx-border-color: #2A55D5; -fx-border-radius: 10; -fx-border-width: 2; -fx-background-color: #FFFFFF; -fx-background-radius: 10;" />
+      <Button fx:id="addButton" layoutX="167.0" layoutY="209.0" mnemonicParsing="false" style="-fx-background-color: #2A55D5; -fx-background-radius: 16;" text="Добавить" textFill="WHITE">
          <font>
             <Font name="Manrope SemiBold" size="14.0" />
          </font>
