prepare ui for save as dialogs, finish save buttons

--- a/app/src/main/resources/fx_screens/EditView.fxml
+++ b/app/src/main/resources/fx_screens/EditView.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
+<?import javafx.scene.layout.StackPane?>
 <AnchorPane maxHeight="618.0" maxWidth="1137.0" prefHeight="618.0" prefWidth="1137.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Pane fx:id="pane" layoutY="70.0" prefHeight="550.0" prefWidth="1138.0" style="-fx-background-color: rgba(42, 76, 213, 0.3);">
@@ -19,6 +20,16 @@
          <children>
             <ScrollPane fx:id="tabPane" prefHeight="88.0" prefWidth="1138.0" />
          </children>
+      </Pane>
+
+      <Pane fx:id="overlayPane"
+            prefHeight="0"
+            prefWidth="0"
+            maxWidth="0"
+            maxHeight="0"
+            style="-fx-background-color: transparent;"
+            AnchorPane.leftAnchor="0"
+            AnchorPane.topAnchor="0">
       </Pane>
    </children>
 </AnchorPane>
