--- a/app/src/main/resources/fx_screens/base.fxml
+++ b/app/src/main/resources/fx_screens/base.fxml
@@ -22,7 +22,7 @@
          </image>
       </ImageView>
       <Pane fx:id="contentPane" layoutY="65.0" prefHeight="618.0" prefWidth="1138.0" />
-      <Pane fx:id="downloadPane" layoutX="732.0" layoutY="590.0" maxHeight="332.0" maxWidth="334.0" minHeight="93.0" minWidth="334.0" opacity="0.0" prefHeight="93.0" prefWidth="334.0" style="-fx-background-color: #transparent; -fx-background-radius: 20;"/>
+      <Pane fx:id="downloadPane" layoutX="732.0" layoutY="590.0" maxHeight="332.0" maxWidth="334.0" minHeight="93.0" minWidth="334.0" opacity="0.0" prefHeight="93.0" prefWidth="334.0" style="-fx-background-color: transparent; -fx-background-radius: 20;"/>
       <Pane fx:id="disablePane" layoutY="63.0" opacity="0.2" prefHeight="717.0" prefWidth="1137.0" style="-fx-background-color: #0A2A85; -fx-background-radius: 20;" visible="false">
          <effect>
             <GaussianBlur radius="2.0" />
