major improvments of UX disign: auto-open and auto-close of different elements, fixing UI bugs, fix queue bug with lectures

--- a/app/src/main/resources/fx_screens/EditView.fxml
+++ b/app/src/main/resources/fx_screens/EditView.fxml
@@ -22,14 +22,23 @@
          </children>
       </Pane>
 
-      <Pane fx:id="overlayPane"
+      <Pane fx:id="overlayFilePane"
             prefHeight="0"
             prefWidth="0"
             maxWidth="0"
             maxHeight="0"
             style="-fx-background-color: transparent;"
-            AnchorPane.leftAnchor="0"
-            AnchorPane.topAnchor="0">
+            AnchorPane.leftAnchor="280"
+            AnchorPane.topAnchor="-47">
+      </Pane>
+      <Pane fx:id="overlayDeletePane"
+            prefHeight="0"
+            prefWidth="0"
+            maxWidth="0"
+            maxHeight="0"
+            style="-fx-background-color: transparent;"
+            AnchorPane.leftAnchor="850"
+            AnchorPane.topAnchor="95">
       </Pane>
    </children>
 </AnchorPane>
