fix style connection to the build

--- a/app/src/main/resources/fx_screens/EditView.fxml
+++ b/app/src/main/resources/fx_screens/EditView.fxml
@@ -16,9 +16,9 @@
             </Pane>
          </children>
       </Pane>
-      <Pane prefHeight="70.0" prefWidth="1138.0" style="-fx-background-color: rgba(58, 92, 185, 0.7);">
+      <Pane prefHeight="70.0" prefWidth="1138.0">
          <children>
-            <ScrollPane fx:id="tabPane" prefHeight="88.0" prefWidth="1138.0" />
+            <ScrollPane fx:id="tabPane" styleClass="tab-scroll-pane" prefHeight="88.0" prefWidth="1138.0" />
          </children>
       </Pane>
 
